[package]
name = "nvml-wrapper"
version = "0.5.0"
authors = ["Cldfire"]
description = "A complete, safe, and ergonomic Rust wrapper for the NVIDIA Management Library."
readme = "README.md"
documentation = "https://docs.rs/nvml-wrapper"
repository = "https://github.com/Cldfire/nvml-wrapper"
license = "MIT/Apache-2.0"
edition = "2018"

keywords = ["nvidia", "gpu", "managment", "monitoring", "hardware"]
categories = ["api-bindings", "hardware-support"]

exclude = [
    "nvml-wrapper-sys/*"
]

[dependencies]
thiserror = "1.0"
bitflags = "1.2"
serde = { version = "1.0", optional = true, features = ["derive"] }
nvml-wrapper-sys = { path = "nvml-wrapper-sys/" }
wrapcenum-derive = { git = "https://github.com/Cldfire/wrapcenum-derive.git" }

[dev-dependencies]
rusty-hook = "^0.11.1"
# Used in the `basic_usage` example
pretty-bytes = "0.2"

[features]
default = []
test-local = []
