[package]
name = "nvml-wrapper-sys"
version = "0.6.0"
authors = ["Cldfire"]
description = "Generated bindings to the NVIDIA Management Library."
readme = "README.md"
documentation = "https://docs.rs/nvml-wrapper-sys"
repository = "https://github.com/Cldfire/nvml-wrapper"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.51.0"

keywords = ["nvidia", "gpu", "managment", "monitoring", "hardware"]
categories = ["external-ffi-bindings", "hardware-support"]

exclude = ["nvml.h"]

[dependencies]
libloading = "0.7.0"

[features]
default = []
