[package]
name = "nvml-wrapper"
version = "0.8.0"
authors = ["Cldfire"]
description = "A safe and ergonomic Rust wrapper for the NVIDIA Management Library"
readme = "../README.md"
documentation = "https://docs.rs/nvml-wrapper"
repository = "https://github.com/Cldfire/nvml-wrapper"
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.51.0"

keywords = ["nvidia", "gpu", "managment", "monitoring", "hardware"]
categories = ["api-bindings", "hardware-support"]

[features]
default = []
legacy-functions = ["nvml-wrapper-sys/legacy-functions"]

[dependencies]
thiserror = "1.0"
bitflags = "1.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
nvml-wrapper-sys = { version = "0.6.0", path = "../nvml-wrapper-sys" }
wrapcenum-derive = "0.4.0"
libloading = "0.7.0"
static_assertions = "1.1"

[dev-dependencies]
rusty-hook = "^0.11.1"
# Used in the `basic_usage` example
pretty-bytes = "0.2"
