[package]
name = "nvml-wrapper"
version = "0.10.0"
authors = ["Cldfire"]
description = "A safe and ergonomic Rust wrapper for the NVIDIA Management Library"
readme = "../README.md"
documentation = "https://docs.rs/nvml-wrapper"
repository = "https://github.com/Cldfire/nvml-wrapper"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.60.0"

keywords = ["nvidia", "gpu", "managment", "monitoring", "hardware"]
categories = ["api-bindings", "hardware-support"]

[features]
default = []
legacy-functions = ["nvml-wrapper-sys/legacy-functions"]
serde = ["dep:serde", "dep:serde_derive", "bitflags/serde"]

[dependencies]
thiserror = "1.0"
bitflags = "2.4.0"
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
nvml-wrapper-sys = { version = "0.8.0", path = "../nvml-wrapper-sys" }
wrapcenum-derive = "0.4.1"
libloading = "0.8.1"
static_assertions = "1.1"

[dev-dependencies]
# Used in the `basic_usage` example
pretty-bytes = "0.2"
